welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: ')' expected but symbol literal found.
  ecritMessage('compteur':String)
                        ^ColumnByColumn:3: error: ';' expected but ')' found.
  while ((getX()!=(getMondeLargeur()-1)) && (getY()!=(getMondeHauteur()-1))) {
                                                                           ^